<resources>
    <string name="app_name">Inverto</string>
    <string name="email_label">Correo Electrónico</string>
    <string name="cuit_label">CUIT</string>
    <string name="importe_label">Importe</string>
    <string name="cant_dias_label">Cantidad de días</string>
    <string name="renovacion_label">Renovar Automaticamente al vencimiento</string>
    <string name="boton_plazofijo_label">Hacer Plazo Fijo</string>
    <string name="rendimiento_label">rendimiento</string>


</resources>